改正不推荐的方式